Major refactors
- Omit X-Group-Id
- Omit merge file parts
- Drop streams collection
- Update postman collection
